@@ -83,45 +83,50 @@ function wcs_get_subscriptions_for_order( $order, $args = array() ) {
 }
 
 /**
- * Copy the billing, shipping or all addresses from one order to another (including custom order types, like the
- * WC_Subscription order type).
+ * Copy the billing, shipping or all addresses from one order or subscription to another.
  *
- * @param WC_Order $to_order The WC_Order object to copy the address to.
- * @param WC_Order $from_order The WC_Order object to copy the address from.
- * @param string $address_type The address type to copy, can be 'shipping', 'billing' or 'all'
+ * @since 2.0.0
+ *
+ * @param WC_Order $to_order     The WC_Order object to copy the address to.
+ * @param WC_Order $from_order   The WC_Order object to copy the address from.
+ * @param string   $address_type The address type to copy, can be 'shipping', 'billing' or 'all'. Optional. Default is "all".
+ *
  * @return WC_Order The WC_Order object with the new address set.
- * @since  2.0
  */
 function wcs_copy_order_address( $from_order, $to_order, $address_type = 'all' ) {
 
-	if ( in_array( $address_type, array( 'shipping', 'all' ) ) ) {
-		$to_order->set_address( array(
-			'first_name' => wcs_get_objects_property( $from_order, 'shipping_first_name' ),
-			'last_name'  => wcs_get_objects_property( $from_order, 'shipping_last_name' ),
-			'company'    => wcs_get_objects_property( $from_order, 'shipping_company' ),
-			'address_1'  => wcs_get_objects_property( $from_order, 'shipping_address_1' ),
-			'address_2'  => wcs_get_objects_property( $from_order, 'shipping_address_2' ),
-			'city'       => wcs_get_objects_property( $from_order, 'shipping_city' ),
-			'state'      => wcs_get_objects_property( $from_order, 'shipping_state' ),
-			'postcode'   => wcs_get_objects_property( $from_order, 'shipping_postcode' ),
-			'country'    => wcs_get_objects_property( $from_order, 'shipping_country' ),
-		), 'shipping' );
+	if ( 'all' === $address_type || 'shipping' === $address_type ) {
+		$to_order->set_shipping_address(
+			array(
+				'first_name' => $from_order->get_shipping_first_name( 'edit' ),
+				'last_name'  => $from_order->get_shipping_last_name( 'edit' ),
+				'company'    => $from_order->get_shipping_company( 'edit' ),
+				'address_1'  => $from_order->get_shipping_address_1( 'edit' ),
+				'address_2'  => $from_order->get_shipping_address_2( 'edit' ),
+				'city'       => $from_order->get_shipping_city( 'edit' ),
+				'state'      => $from_order->get_shipping_state( 'edit' ),
+				'postcode'   => $from_order->get_shipping_postcode( 'edit' ),
+				'country'    => $from_order->get_shipping_country( 'edit' ),
+			)
+		);
 	}
 
-	if ( in_array( $address_type, array( 'billing', 'all' ) ) ) {
-		$to_order->set_address( array(
-			'first_name' => wcs_get_objects_property( $from_order, 'billing_first_name' ),
-			'last_name'  => wcs_get_objects_property( $from_order, 'billing_last_name' ),
-			'company'    => wcs_get_objects_property( $from_order, 'billing_company' ),
-			'address_1'  => wcs_get_objects_property( $from_order, 'billing_address_1' ),
-			'address_2'  => wcs_get_objects_property( $from_order, 'billing_address_2' ),
-			'city'       => wcs_get_objects_property( $from_order, 'billing_city' ),
-			'state'      => wcs_get_objects_property( $from_order, 'billing_state' ),
-			'postcode'   => wcs_get_objects_property( $from_order, 'billing_postcode' ),
-			'country'    => wcs_get_objects_property( $from_order, 'billing_country' ),
-			'email'      => wcs_get_objects_property( $from_order, 'billing_email' ),
-			'phone'      => wcs_get_objects_property( $from_order, 'billing_phone' ),
-		), 'billing' );
+	if ( 'all' === $address_type || 'billing' === $address_type ) {
+		$to_order->set_billing_address(
+			array(
+				'first_name' => $from_order->get_billing_first_name( 'edit' ),
+				'last_name'  => $from_order->get_billing_last_name( 'edit' ),
+				'company'    => $from_order->get_billing_company( 'edit' ),
+				'address_1'  => $from_order->get_billing_address_1( 'edit' ),
+				'address_2'  => $from_order->get_billing_address_2( 'edit' ),
+				'city'       => $from_order->get_billing_city( 'edit' ),
+				'state'      => $from_order->get_billing_state( 'edit' ),
+				'postcode'   => $from_order->get_billing_postcode( 'edit' ),
+				'country'    => $from_order->get_billing_country( 'edit' ),
+				'email'      => $from_order->get_billing_email( 'edit' ),
+				'phone'      => $from_order->get_billing_phone( 'edit' ),
+			)
+		);
 	}
 
 	return apply_filters( 'woocommerce_subscriptions_copy_order_address', $to_order, $from_order, $address_type );
